; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_input.c_input_Close.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_input.c_input_Close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @input_Close(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = call %struct.TYPE_2__* @input_priv(i32* %3)
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 2
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %14

8:                                                ; preds = %1
  %9 = load i32*, i32** %2, align 8
  %10 = call %struct.TYPE_2__* @input_priv(i32* %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @vlc_join(i32 %12, i32* null)
  br label %14

14:                                               ; preds = %8, %1
  %15 = load i32*, i32** %2, align 8
  %16 = call %struct.TYPE_2__* @input_priv(i32* %15)
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = call i32 @vlc_interrupt_deinit(i32* %17)
  %19 = load i32*, i32** %2, align 8
  %20 = call i32 @Destroy(i32* %19)
  ret void
}

declare dso_local %struct.TYPE_2__* @input_priv(i32*) #1

declare dso_local i32 @vlc_join(i32, i32*) #1

declare dso_local i32 @vlc_interrupt_deinit(i32*) #1

declare dso_local i32 @Destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
